# phasmo-tracker

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  phasmo_ghosts.toml  phasmo_tracker.toml  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  desktop-artifact.yml
electron/: main.cjs  preload.cjs
frontend/src/: App.test.tsx  App.tsx  evidenceMeta.test.ts  evidenceMeta.ts  ghostHuntMeta.test.ts  ghostHuntMeta.ts  global.d.ts  stateMeta.ts  styles.css  trackerModel.test.ts  trackerModel.ts
frontend/src/components/: AppHeader.test.tsx  AppHeader.tsx  EvidenceChip.test.tsx  EvidenceChip.tsx  EvidencePanel.test.tsx  EvidencePanel.tsx  GhostsPanel.test.tsx  GhostsPanel.tsx  TrackerDetails.test.tsx  TrackerDetails.tsx  UnofficialTraitsPanel.test.tsx  UnofficialTraitsPanel.tsx
src/: config.rs  evidence.rs  ghosts.rs  lib.rs  main.rs  page.rs  tracker.rs  window.rs
