[package]
name = "phasmo_evidence_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
xcap = "0.9.3"
