[package]
name = "phasmo_evidence_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.5.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
xcap = "0.9.4"
